# opengles

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/opengles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jniBridge.cpp
app/src/main/cpp/log/: OpenEsLog.h
app/src/main/cpp/render/: MyGLRenderContext.cpp  MyGLRenderContext.h
app/src/main/cpp/utils/: GLUtils.cpp  GLUtils.h
app/src/main/java/com/example/opengles/: FirstFragment.kt  MainActivity.kt  MyGlSurfaceView.kt  MyNativeSurfaceRender.kt  MySurfaceRender.kt  OpenglActivity.kt  SecondFragment.kt
app/src/main/res/layout/: activity_main.xml  activity_opengl.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
opengl2/: build.gradle
opengl2/src/main/: AndroidManifest.xml
opengl2/src/main/assets/fshader/: color_gray.glsl  fchartlet.glsl
opengl2/src/main/assets/shader/: oes_base_fragment.glsl  oes_base_vertex.glsl
opengl2/src/main/assets/vary/: vertex.glsl
opengl2/src/main/assets/vshader/: Ball.glsl  Cone.glsl  filter_base_vertex.glsl  vchartlet.glsl
opengl2/src/main/res/layout/: activity_chartlet.xml  activity_fbo.xml  activity_fglview.xml  activity_list.xml  activity_main.xml  activity_opengl.xml  item_choose.xml  item_view.xml
opengl2/src/main/res/values/: strings.xml  themes.xml
opengl2/src/main/res/values-night/: themes.xml
(+36 files in other folders)
